--- a/playground.ipynb
+++ b/playground.ipynb
@@ -6141,22 +6141,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "{'scale_factor': 1049.2775234188523,\n",
+       " 'center': [256.0, 256.0, 281.5],\n",
+       " 'fov': 45.0,\n",
+       " 'elevation': 32.5,\n",
+       " 'azimuth': -9.0,\n",
+       " 'roll': 0.0}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Invoking <function on_timer at 0x0000017EB797A170> repeat 16384\n"
+     ]
     }
    ],
    "source": [
-    "# fig[0].camera.#transforms.get_transform().simplified#.__dir__()"
+    "fig[0].camera.get_state() #.#transforms.get_transform().simplified#.__dir__()"
    ]
   },
   {
@@ -6206,151 +6218,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vispy import app, scene, io\n",
+    "from vispy.visuals.transforms import STTransform\n",
+    "\n",
+    "# Read volume\n",
+    "vol = t[::-1]\n",
+    "\n",
+    "canvas = scene.SceneCanvas(keys='interactive', show=True)\n",
+    "view = canvas.central_widget.add_view()\n",
+    "volume = scene.visuals.Volume(vol, method='iso', texture_format='auto', parent=view.scene,)\n",
+    "volume.transform = scene.STTransform(translate=(64, 64, 0))\n",
+    "\n",
+    "cam = scene.cameras.TurntableCamera(parent=view.scene, fov=60)\n",
+    "view.camera = cam\n",
+    "\n",
+    "# Create an XYZAxis visual\n",
+    "axis = scene.visuals.XYZAxis(parent=view)\n",
+    "s = STTransform(translate=(50, 50), scale=(50, 50, 50, 1))\n",
+    "affine = s.as_matrix()\n",
+    "axis.transform = affine\n",
+    "\n",
+    "app.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n",
-      "dupa\n"
+      "30.0\n",
+      "14.0\n",
+      "-36.0\n",
+      "-54.0\n",
+      "-93.0\n",
+      "-16.0\n",
+      "4.5\n",
+      "4.5\n",
+      "4.5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Invoking <function on_timer at 0x0000017EB797A170> repeat 32768\n",
+      "ERROR: Invoking <function on_timer at 0x0000017EB797A170> repeat 65536\n",
+      "ERROR: Invoking <function on_timer at 0x0000017EB797A170> repeat 131072\n",
+      "ERROR: Invoking <function on_timer at 0x0000017EB797A170> repeat 262144\n",
+      "ERROR: Invoking <function on_timer at 0x0000017EB797A170> repeat 524288\n"
      ]
     }
    ],
@@ -6358,11 +6281,11 @@
     "import vispy.plot\n",
     "import vispy.app\n",
     "\n",
-    "fig = vispy.plot.Fig(bgcolor='k', size=(800, 800), show=True)\n",
-    "volume = fig[0].volume(np.flip(vol, axis=0), texture_format='auto', method='mip') # iso\n",
+    "figure = vispy.plot.Fig(bgcolor='k', size=(800, 800), show=True)\n",
+    "volume = figure[0].volume(np.flip(vol, axis=0), texture_format='auto', method='mip') # iso\n",
     "\n",
     "canvas = volume.canvas\n",
-    "timer = app.Timer()\n",
+    "timer = app.Timer(interval=1)\n",
     "\n",
     "@canvas.events.key_press.connect\n",
     "def on_key_press(event):\n",
@@ -6371,11 +6294,191 @@
     "        canvas.close()\n",
     "\n",
     "def on_timer(event):\n",
-    "    print(canvas)\n",
+    "    print(figure[0].camera.get_state()['azimuth'])\n",
     "timer.connect(on_timer)\n",
     "\n",
     "timer.start()\n",
     "app.run()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "timer.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xmltodict\n",
+    "import numpy as np\n",
+    "na = np.asarray\n",
+    "\n",
+    "with open(r\"C:\\Users\\krism\\Desktop\\PD\\Training_dataset\\7\\E664693092S1119182802.QVS\", \"r\", errors='ignore') as fh:\n",
+    "    rl = \"\\n\".join(fh.readlines())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['0/Lumen/Contour_Point', '0/Lumen/Snake_Point', '1/Outer Wall/Contour_Point', '1/Outer Wall/Snake_Point'])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# xmltodict.parse(rl)[\"QVAS_Series\"][\"QVAS_Image\"][213][\"@ImageName\"]\n",
+    "# xmltodict.parse(rl)[\"QVAS_Series\"][\"QVAS_Image\"][213][\"QVAS_Contour\"][0][\"ContourType\"]\n",
+    "# xmltodict.parse(rl)[\"QVAS_Series\"][\"QVAS_Image\"][213][\"QVAS_Contour\"][0][\"Snake_Point\"][\"Point\"][0][\"@x\"]\n",
+    "# xmltodict.parse(rl)[\"QVAS_Series\"][\"QVAS_Image\"][213][\"QVAS_Contour\"][0][\"Contour_Point\"][\"Point\"][0][\"@x\"]\n",
+    "\n",
+    "# for ct in (\"Outer Wall\", \"Lumen\")\n",
+    "\n",
+    "got_raw = xmltodict.parse(rl)[\"QVAS_Series\"][\"QVAS_Image\"]\n",
+    "cpal = [\n",
+    "    {\n",
+    "            f\"{czi}/{czc['ContourType']}/{pt}\": na([(float(po[\"@x\"]), float(po[\"@y\"])) for po in czc[pt][\"Point\"]]) \n",
+    "        for czi, czc in enumerate(cz.get(\"QVAS_Contour\", []))\n",
+    "        for pt in (\"Contour_Point\", \"Snake_Point\")\n",
+    "    } for cz in got_raw\n",
+    "]\n",
+    "cpal[234].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(144, 8),\n",
+       " (149, 11),\n",
+       " (154, 9),\n",
+       " (159, 9),\n",
+       " (164, 9),\n",
+       " (169, 8),\n",
+       " (174, 8),\n",
+       " (179, 8),\n",
+       " (184, 11),\n",
+       " (189, 11),\n",
+       " (194, 12),\n",
+       " (199, 10),\n",
+       " (204, 10),\n",
+       " (209, 9),\n",
+       " (214, 8),\n",
+       " (219, 8),\n",
+       " (224, 6),\n",
+       " (229, 6),\n",
+       " (234, 7),\n",
+       " (239, 8),\n",
+       " (244, 9)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ds\n",
+    "gotz = [(zx, l) for zx, l in enumerate([\n",
+    "        len(c.get((\n",
+    "            [key for key in sorted(c.keys()) if \"Outer Wall/Snake_Point\" in key] or [None])[0], [])) for c in cpal]\n",
+    "    ) if l > 0\n",
+    "]\n",
+    "gotz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x265e624ab00>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import cv2\n",
+    "import pydicom\n",
+    "%matplotlib qt\n",
+    "\n",
+    "ds_path = r\"C:\\Users\\krism\\Desktop\\PD\\Training_dataset\\7\\IMG-0001-00234.dcm\"\n",
+    "dsi = int(ds_path[-8:-4])\n",
+    "ds = pydicom.dcmread(ds_path)\n",
+    "dss = na(ds.pixel_array)\n",
+    "# cva = np.zeros((430,)*2, dtype=np.uint8)\n",
+    "# cv2.drawContours(cva, cpal[213][\"Outer Wall/Contour_Point\"].astype(np.uint16), 0, 255)\n",
+    "for nam in [key for key in cpal[dsi].keys() if \"/\" in key]:\n",
+    "# for nam in ['0/Outer Wall/Contour_Point',  '1/Lumen/Contour_Point']:\n",
+    "    # ps = -cpal[215][nam] +np.asarray([[cva.shape[1], cva.shape[0]]])\n",
+    "    ps = cpal[dsi][nam] * (0.845) #na(ds.PixelSpacing)[None]\n",
+    "    cva = cv2.polylines(dss, ps.astype(np.int32)[None], 1, 255)\n",
+    "    # cv2.fillPoly(cva, ps.astype(np.int32)[None], 255)\n",
+    "\n",
+    "# czc = cz[\"QVAS_Contour\"][0]\n",
+    "# czc[\"Contour_Point\"][\"Point\"]\n",
+    "\n",
+    "fig,ax = plt.subplots(1,1)\n",
+    "fig.tight_layout()\n",
+    "ax.imshow(cva)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x265eb623940>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_ = ds\n",
+    "dsa_dstsh = na(ds_.pixel_array.shape) *  na(ds_.PixelSpacing) / na([0.416015625, 0.416015625])\n",
+    "dsss = cv2.resize(dss, dsa_dstsh.astype(int), interpolation=cv2.INTER_CUBIC)\n",
+    "ds_.pixel_array.dtype\n",
+    "\n",
+    "plt.imshow(dsss)"
    ]
   }
  ],
