--- a/playground.ipynb
+++ b/playground.ipynb
@@ -6315,12 +6315,13 @@
     }
    ],
    "source": [
-    "timer.stop()"
+    "timer.stop()\n",
+    "\"C:\\Users\\krism\\Desktop\\PD\\Training_dataset\\3\\E631862710S1119212739.QVS\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6329,12 +6330,13 @@
     "na = np.asarray\n",
     "\n",
     "with open(r\"C:\\Users\\krism\\Desktop\\PD\\Training_dataset\\7\\E664693092S1119182802.QVS\", \"r\", errors='ignore') as fh:\n",
+    "# with open(r\"C:\\Users\\krism\\Desktop\\PD\\Training_dataset\\3\\E631862710S1119212739.QVS\", \"r\", errors='ignore') as fh:\n",
     "    rl = \"\\n\".join(fh.readlines())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -6343,7 +6345,7 @@
        "dict_keys(['0/Lumen/Contour_Point', '0/Lumen/Snake_Point', '1/Outer Wall/Contour_Point', '1/Outer Wall/Snake_Point'])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6369,7 +6371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -6398,7 +6400,7 @@
        " (244, 9)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6415,16 +6417,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]] aa\n",
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]] aa\n",
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]] aa\n",
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]] aa\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x265e624ab00>"
+       "<matplotlib.image.AxesImage at 0x1a614bcfdf0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6438,14 +6474,15 @@
     "ds_path = r\"C:\\Users\\krism\\Desktop\\PD\\Training_dataset\\7\\IMG-0001-00234.dcm\"\n",
     "dsi = int(ds_path[-8:-4])\n",
     "ds = pydicom.dcmread(ds_path)\n",
-    "dss = na(ds.pixel_array)\n",
+    "cva = na(ds.pixel_array)\n",
     "# cva = np.zeros((430,)*2, dtype=np.uint8)\n",
     "# cv2.drawContours(cva, cpal[213][\"Outer Wall/Contour_Point\"].astype(np.uint16), 0, 255)\n",
     "for nam in [key for key in cpal[dsi].keys() if \"/\" in key]:\n",
     "# for nam in ['0/Outer Wall/Contour_Point',  '1/Lumen/Contour_Point']:\n",
-    "    # ps = -cpal[215][nam] +np.asarray([[cva.shape[1], cva.shape[0]]])\n",
+    "    # ps = -cpal[dsi][nam] +np.asarray([[cva.shape[1], cva.shape[0]]])\n",
     "    ps = cpal[dsi][nam] * (0.845) #na(ds.PixelSpacing)[None]\n",
-    "    cva = cv2.polylines(dss, ps.astype(np.int32)[None], 1, 255)\n",
+    "    o = cv2.polylines(cva, ps.astype(np.int32)[None], 1, 255)\n",
+    "    print(o, \"aa\")\n",
     "    # cv2.fillPoly(cva, ps.astype(np.int32)[None], 255)\n",
     "\n",
     "# czc = cz[\"QVAS_Contour\"][0]\n",
@@ -6458,16 +6495,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x265eb623940>"
+       "<matplotlib.image.AxesImage at 0x1a610f95ba0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6479,6 +6516,17 @@
     "ds_.pixel_array.dtype\n",
     "\n",
     "plt.imshow(dsss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import vispy.visuals\n",
+    "\n",
+    "vispy.visuals.volume()"
    ]
   }
  ],
